--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
       To begin the development, run `npm start`.
       To create a production bundle, use `npm run build`.
     -->
-This is raja home page jacksonville
+This is raja home 
     <br>
-    This is my city Jacksonville
+    This is my  Jacksonville city
     </br>
   </body>
 </html>
